# urillm

./: README.md  goal.yaml  pyproject.toml  urillm.markpact.md
data/: events.jsonl
markpacts/: urillm.markpact.md
tests/: test_import.py  test_llm_plan.py  test_manifest.py  test_runtime.py  test_text_decide.py
urillm/: handlers.py  manifest.yaml
